--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb://localhost/mama-fua
-SECRET=gjkagkdjglkigfaisdbciwcuigwuicgw
+MONGODB_URI=mongodb://MamaFuaAdmin:Kamble98##¬@127.0.0.1:6785/mamafua?authsource=admin
+SECRET=gjkagkdjglkigfaisdbciwcuigwuicgw#131afah
