--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb://MamaFuaAdmin:Kamble98##¬@127.0.0.1:6785/mamafua?authsource=admin
-#MONGODB_URI=mongodb://localhost:27017/mama-fua
+#MONGODB_URI=mongodb://MamaFuaAdmin:Kamble98##¬@127.0.0.1:6785/mamafua?authsource=admin
+MONGODB_URI=mongodb://localhost:27017/mama-fua
 SECRET=gjkagkdjglkigfaisdbciwcuigwuicgw#131afah
