Added referral fetch function

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://MamaFuaAdmin:Kamble98##¬@127.0.0.1:6785/mamafua?authsource=admin
-#MONGODB_URI=mongodb://localhost:27017/mama-fua
+#MONGODB_URI=mongodb://MamaFuaAdmin:Kamble98##¬@127.0.0.1:6785/mamafua?authsource=admin
+MONGODB_URI=mongodb://localhost:27017/mama-fua
 SECRET=gjkagkdjglkigfaisdbciwcuigwuicgw#131afah
 REFRESH_SECRET=2406824@#2638746832jaghkgassDGKJAS`!2"£#131afah
